vlib/v/parser/tests/assert_missing_comma_message_err.vv
fn main() {
	assert false 'bye'
}
